--- a/modules/user/hyprland/workspaces.conf
+++ b/modules/user/hyprland/workspaces.conf
@@ -4,27 +4,27 @@
 # /___/\_, /_/  \__/_/  /_//__/
 #       /_/                    
 
-# $KTC=DP-4
-$Acer=HDMI-A-1
+$KTC=DP-3
+#$Acer=HDMI-A-1
 
-workspace=1,monitor:$Acer
-workspace=2,monitor:$Acer
-workspace=3,monitor:$Acer
-workspace=4,monitor:$Acer
-workspace=5,monitor:$Acer
-workspace=6,monitor:$Acer
-workspace=7,monitor:$Acer
-workspace=8,monitor:$Acer
-workspace=9,monitor:$Acer
-workspace=10,monitor:$Acer
+#workspace=1,monitor:$Acer
+#workspace=2,monitor:$Acer
+#workspace=3,monitor:$Acer
+#workspace=4,monitor:$Acer
+#workspace=5,monitor:$Acer
+#workspace=6,monitor:$Acer
+#workspace=7,monitor:$Acer
+#workspace=8,monitor:$Acer
+#workspace=9,monitor:$Acer
+#workspace=10,monitor:$Acer
 
-# workspace=11,monitor:$KTC
-# workspace=12,monitor:$KTC
-# workspace=13,monitor:$KTC
-# workspace=14,monitor:$KTC
-# workspace=15,monitor:$KTC
-# workspace=16,monitor:$KTC
-# workspace=17,monitor:$KTC
-# workspace=18,monitor:$KTC
-# workspace=19,monitor:$KTC
-# workspace=10,monitor:$KTC
+workspace=1,monitor:$KTC
+workspace=2,monitor:$KTC
+workspace=3,monitor:$KTC
+workspace=4,monitor:$KTC
+workspace=5,monitor:$KTC
+workspace=6,monitor:$KTC
+workspace=7,monitor:$KTC
+workspace=8,monitor:$KTC
+workspace=9,monitor:$KTC
+workspace=10,monitor:$KTC
